main functionality of extension

--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,11 @@
     "default_popup": "popup.html",
     "default_icon": "icon.png"
   },
+  "content_scripts": [
+    {
+      "matches": ["http://*/*", "https://*/*"],
+      "js": ["contentScript.js"]
+    }
+  ],
   "manifest_version": 2
 }
