handle tab onUpdated

--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,10 @@
     "default_popup": "popup.html",
     "default_icon": "icon.png"
   },
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
